refactor: simplify replenish status UI for readability